bk_ida/gccida/g3/gen_decl_die
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11877:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11885:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11886:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11899:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11900:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11915:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11922:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v50; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11928:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11944:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v72; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11950:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v78; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11951:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v79; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11956:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v84; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:11971:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:12011:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:12042:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:12056:46: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)&v70->die = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v10, ( __m128i)( unsigned __int64)decl); 
                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:12056:80: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)&v70->die = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v10, ( __m128i)( unsigned __int64)decl); 
                                                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:12081:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 10568, "gen_label_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/dwarf2out.c:12138:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_decl_die/src/obj/dwarf2out.o] Error 1
